// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals View ControlGroup Component does not set selected initially if not provided 1`] = `
<Button.Group>
  <ControlButton
    isSelected={false}
    key="foo"
    onClick={[Function]}
    selectedKey="foo"
  >
    fOo
  </ControlButton>
  <ControlButton
    isSelected={false}
    key="bar"
    onClick={[Function]}
    selectedKey="bar"
  >
    <test>
      BaR
    </test>
  </ControlButton>
</Button.Group>
`;

exports[`Signals View ControlGroup Component handles a select correctly 1`] = `
<ControlButton
  isSelected={true}
  key="foo"
  onClick={[Function]}
  selectedKey="foo"
>
  fOo
</ControlButton>
`;

exports[`Signals View ControlGroup Component renders correctly 1`] = `
<Button.Group>
  <ControlButton
    isSelected={false}
    key="foo"
    onClick={[Function]}
    selectedKey="foo"
  >
    fOo
  </ControlButton>
  <ControlButton
    isSelected={true}
    key="bar"
    onClick={[Function]}
    selectedKey="bar"
  >
    <test>
      BaR
    </test>
  </ControlButton>
</Button.Group>
`;
